--- a/package.json
+++ b/package.json
@@ -3,21 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "4.11.3",
-    "@material-ui/icons": "4.11.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/material": "^5.10.17",
+    "@react-spring/web": "^9.5.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "nuka-carousel": "^5.4.1",
     "react": "^18.2.0",
+    "react-blur": "^1.1.1",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-native-card-stack-swiper": "^1.2.5",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.5.5",
     "react-tinder-card": "^1.6.2",
+    "react-use-gesture": "^9.1.3",
+    "react-with-gesture": "^4.0.8",
     "reactjs-popup": "^2.0.5",
     "socket.io-client": "^4.5.4",
     "web-vitals": "^2.1.4"
